# codex-remote-bridge

./: .gitignore  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  vitest.config.ts
apps/desktop-agent/: package.json
apps/desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-agent/src-tauri/capabilities/: default.json
apps/desktop-agent/src-tauri/icons/: icon.icns
apps/desktop-agent/src-tauri/src/: agent.rs  cdp.rs  config.rs  lib.rs  local_ops.rs  main.rs  mobile_access.rs  protocol.rs  update.rs
apps/desktop-agent/src-tauri/windows/: hooks.nsh
documentation/: DESKTOP_AGENT.md
src/: App.vue  main.ts  pathUtils.test.ts  pathUtils.ts  projectRootSuggestionBehavior.test.ts  releaseVersionConsistency.test.ts  style.commandActivity.test.ts  style.css
src/api/: codexGateway.localDeviceRouting.test.ts  codexGateway.test.ts  codexGateway.ts  codexRpcClient.deviceRouting.test.ts  codexRpcClient.ts  deviceContext.test.ts  deviceContext.ts
src/cli/: index.ts
src/composables/: threadSyncPolicy.test.ts  threadSyncPolicy.ts  useDesktopState.test.ts  useDesktopState.ts  useUiLanguage.test.ts  useUiLanguage.ts
src/desktop-agent/: agentConnection.test.ts  agentConnection.ts  protocol.test.ts  protocol.ts
src/router/: deviceRoute.test.ts  index.ts
src/server/: codexAppServerBridge.archive.test.ts  codexAppServerBridge.inlinePayload.test.ts  codexAppServerBridge.realtimeBridge.test.ts  codexAppServerBridge.ts  desktopAgentRelay.test.ts  desktopAgentRelay.ts  httpServer.ts  remoteImage.test.ts  remoteImage.ts
src/utils/: localImageUrl.ts  (+5 more)
(+39 files in other folders)
